almost close to end

--- a/style.css
+++ b/style.css
@@ -102,7 +102,6 @@
     display: flex;
 }
 
-
 #card-btn {
     background-color: #051246;
     color: #fff;
@@ -406,29 +405,30 @@
     margin-bottom: 100px;
 }
 
-#banner-part{
+#banner-part {
     border-radius: 25px;
     width: 90%;
     height: 100%;
-    background-image:url(content/banner.png);
+    background-image: url(content/banner.png);
     background-repeat: no-repeat;
     background-size: auto;
     background-position: right;
     background-color: #061757;
 }
 
-.banner-text{
+.banner-text {
     color: #626d95;
 }
-#sec-last-banner{
+
+#sec-last-banner {
     background-image: url(content/bowlshade.svg);
     background-position: center;
     /* background-position: right; */
-    background-size:contain;
+    background-size: contain;
     background-repeat: no-repeat;
 }
 
-#sec-last-banner-head::after{
+#sec-last-banner-head::after {
     content: "";
     display: block;
     width: 45px;
@@ -438,17 +438,73 @@
     top: -13px;
     left: 119px;
 }
-.sec-last-banner-carosal-img{
+
+.sec-last-banner-carosal-img {
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
+.sec-last-banner-pop {
+    border-radius: 20px;
+    margin: auto;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 90%;
+    width: 95%;
+    color: transparent;
+}
 
+.sec-last-banner-pop:hover {
+    background: linear-gradient(to bottom, #e52c48, #cc455900);
+    border-radius: 20px;
+    margin: auto;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 90%;
+    width: 95%;
+    color: #fff;
+}
 
+.pop-text {
+    margin-top: 10%;
+    margin-left: -35%;
+    padding: 12px;
 
+}
 
+.pop-text-para {
+    font-size: medium;
+}
 
+.form-with-map {
+    background-image: url(content/banner.png);
+    background-position: right;
+    background-position-y: bottom;
+    background-size: 50%;
+    background-repeat: no-repeat;
+    width: 50%;
+    background-color: #061757;
+}
 
+.form-para {
+    color: #929292;
+}
+
+.input {
+    width: 100%;
+    max-width: 220px;
+    height: 45px;
+    padding: 12px;
+    border-radius: 12px;
+    border: 1.5px solid transparent;
+    outline: none;
+    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+    box-shadow: 0px 0px 20px -18px;
+    background-color: #2c3f7e;
+    color: #f6f6f6;
+}
 
 
 
@@ -468,7 +524,6 @@
     .first-carosal-card {
         width: 22rem;
     }
-
 }
 
 @media (max-width: 640px) and (min-width:400px) {
@@ -502,7 +557,8 @@
     .header-button {
         font-size: 18px;
     }
-    #banner-row{
+
+    #banner-row {
         text-align: center;
     }
 }
@@ -536,7 +592,6 @@
         left: 70px;
         bottom: 20px;
     }
-   
 }
 
 
